clang/test/BSC/Negative/OwnedStruct/access/owned-struct-static-member-function-error-case1.cbs
// RUN: %clang_cc1 -verify %s


owned struct A {
    int a;
public:
    int f() {return 0; }
};

int main() {
    A a;
    a.f(); // expected-error {{no instance member named 'f' in 'struct A'; did you mean to use '::' instead of '.'?}}
    // expected-note@-1 {{found the following member function 'f' which doesn't have a 'this' parameter}}
    return 0;
}

